pipeline input creation

--- a/src/popup.html
+++ b/src/popup.html
@@ -19,6 +19,7 @@
         <textarea id="text" placeholder="Enter text here"></textarea>
         <button id="scanhtml">Scan html</button>
         <button id="matchingfields">Matching fields</button>
+        <button id="fillform">Fill form</button>
         <pre id="output"></pre>
     </div>
 </body>
