--- a/src/popup.html
+++ b/src/popup.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title> Magic Sync </title>
 
     <!-- Load styles -->
@@ -12,16 +12,10 @@
 </head>
 
 <body>
-
-    <div class="container">
-        <h1>Magic Sync</h1>
-        <!-- <h2>Run 🤗 Transformers in a Browser Extension!</h2> -->
-        <textarea id="text" placeholder="Enter text here"></textarea>
-        <button id="scanhtml">Scan html</button>
-        <button id="matchingfields">Matching fields</button>
-        <button id="fillform">Fill form</button>
-        <pre id="output"></pre>
-    </div>
+    <input type="button" id="fetchHtml" value="Fetch HTML">
+    
+    <script src="popup.js"></script>
 </body>
 
 </html>
+  
