extension info matching

--- a/src/popup.html
+++ b/src/popup.html
@@ -20,6 +20,8 @@
         <button id="scanhtml">Scan html</button>
         <button id="matchingfields">Matching fields</button>
         <button id="fillform">Fill form</button>
+        <button id="processMarkupLM" hidden>Process with MarkupLM</button>
+
         <pre id="output"></pre>
     </div>
 </body>
